2011-11-??	getting closer to 2.02
 - BPRMF, MatrixFactorization: fix two bugs in incremental updates (zeno)
 - add BiasedMatrixFactroization (zeno, chris)
 - rename package itemrecommendation to itemrec (zeno)
 - add Mahout jarfile (zeno)
 - eval.ItemsOnline, ratingprediction.IIncrementalRatingPredictor,
   and itemrecommendation.IIncrementalItemRecommender (zeno)


2011-11-18	initial port of MyMediaLite 1.05 by Chris Newell